# venom-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TRANSFER_TO_CLAUDE.md  cli.py  pyproject.toml  run_agent.py
AUDIT/: VENOM∞.md  deep-research-report.md
COMPARE/: NousResearch-Gym.md  _STEAL.md  cursor-sdk-cli.md  hermes-agent-self-evolution.md  openclaw.md  venom-vs-field.md
COMPARE/research/: telegram-batch-002.md
EVOLUTION/: ratings_history.yaml
INTAKE/: PROTOCOL.md
INTAKE/telegram-batch-002/: ARCHITECTURE (2).md  ARCHITECTURE.md  DISTANCE_FLOW (2).md  DISTANCE_FLOW.md  INDEX.md  INK (2).md  MEASUREMENT.md  PI_COMPLETE_DOCUMENTATION.md  PRD.md  README.md  VENOM_MEMO_FINAL.md  cursor-sdk-cookbook-analysis.md  patterns (2).md  pi-agent-profile.md  venom-cursor-sdk-full-session.md  venom-molt-layer2.md
MEMORY/: SACK.md
SOUL/: PACT.md
agent/: auxiliary_client.py  model_metadata.py
docs/EVOLUTION/: LOOP.md  gaps.md  ratings_history.yaml
docs/architecture/: STATE.yaml
docs/architecture/LAYERS/: L0_shell.md  L10_reciprocity.md  L11_personality.md  (+9 more)
docs/memory/: MEMORY.md
docs/soul/: VOICE.md
gateway/: run.py
hermes_cli/: auth.py  commands.py  main.py  model_normalize.py  models.py  provider_contracts.py  providers.py
scripts/: compass.py
src/ven0m/: __init__.py  cli.py
tests/: test_cli_reasoning_command.py  test_mantle.py  test_siphon.py
tests/agent/: test_auxiliary_client.py  test_model_metadata.py
tests/hermes_cli/: test_api_key_providers.py  test_commands.py  test_model_normalize.py  test_model_provider_persistence.py  test_models.py
(+37 files in other folders)
