[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ven0m"
version = "0.1.0"
description = "VENOM Agent — unshelled AI architecture. Session death, rebirth, distributed cognition."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "unshelled.ai", email = "venom@unshelled.ai" },
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
siphon = "ven0m.siphon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
